# HttpAutoDiff

./: .gitignore  README1.md  __init__.py  entrypoint.beta  entrypoint.prod  manage.py  requirements.txt  setup.cfg  setup.py
HttpAutoDiff/: asgi.py  settings.py  settings_beta.py  settings_prod.py  urls.py  wsgi.py
diffTools/: apps.py
diffTools/biz/: CompareBiz.py  WriteCaseToDBBiz.py
diffTools/comman/constant/: globalConstant.py
diffTools/comman/model/: HttpResponseResult.py  StatusCodeException.py  __init__.py
diffTools/comman/util/: FetchCaseFromOL.py  __init__.py  fetch_case.sh
diffTools/dao/mapper/: CaseMapper.py  __init__.py
diffTools/dao/models/: CaseModel.py  __init__.py
diffTools/provider/: CompareController.py  WriteCaseToDBController.py
diffTools/provider/UrlConf/: urls.py
diffTools/provider/controller/: __init__.py
tools/: case_warehouse  install_venv.py  install_venv_common.py  with_venv.sh
web/templates/: index.html
