[metadata]
name = HttpAutoDiff
version = 0.0.1
home-page = http://git.corp.bianlifeng.com/qa/python_http_automated_diff
author = hang.yu06
author-email = hang.yu06@bianlifeng.com
description-file = README.md
license = Bianlifeng
classifier =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
keywords =
    setup
    distutils


[files]
packages = 'HttpAutoDiff'



[entry_points]
console_scripts =
     api = diffTools.manage:main